--- a/client/static/css/styles.css
+++ b/client/static/css/styles.css
@@ -1,5 +1,39 @@
-* {
+*{
 	margin: 0px; 
 	padding: 0px; 
 	font-family: sans-serif;
+}
+body {
+	background-color: orange;  
+}
+.container {
+	min-width: 960px; 
+	max-width: 960px; 
+	min-height: 500px;
+	border-radius: 5px; 
+	margin: 25px auto;   
+	background-color: rgba(255,255,255,.8); 
+	overflow: auto; 
+}
+.answer_box {
+	background-color: rgba(250,250,250,.7); 
+	border: 1px solid grey;
+	box-shadow: 0px 0px 5px inset; 
+	min-height: 100px; 
+	max-height: 250px; 
+	overflow: auto; 
+}
+.polls {
+	color: red; 
+	font-weight: bold;
+	text-decoration: underline;
+	text-shadow: 0px 0px 5px blue;   
+}
+
+
+
+.test {
+	background-color: rgba(250,0,0,.3); 
+	border: 1px solid black; 
+	overflow: auto; 
 }
