created form partial to create polls. created controll & factory for this partial. created feature to add poll to database. created route rules to redirect user to poll dashboard

--- a/client/static/partials/dashboard.html
+++ b/client/static/partials/dashboard.html
@@ -1,6 +1,6 @@
 <div class="col-xs-12" ng-controller='dashboard'>
 	<div class="row">
-		<a href="" class='col-xs-2 col-xs-offset-9'>Create a New Poll</a>
+		<a href="#/create" class='col-xs-2 col-xs-offset-9'>Create a New Poll</a>
 		<a href="#/" class='col-xs-1'>Logout</a>
 	</div>
 	<div class="row">
