--- a/client/static/css/styles.css
+++ b/client/static/css/styles.css
@@ -15,13 +15,12 @@ body {
 	background-color: rgba(255,255,255,.8); 
 	overflow: auto; 
 }
-.answer_box {
-	background-color: rgba(250,250,250,.7); 
-	border: 1px solid grey;
-	box-shadow: 0px 0px 5px inset; 
-	min-height: 100px; 
-	max-height: 250px; 
-	overflow: auto; 
+.poll_table {
+	max-height: 300px; 
+}
+.poll_table tr, th {
+	background-color: white; 
+	text-align: center; 
 }
 .polls {
 	color: red; 
