added placeholder in dashboard search field

--- a/client/static/partials/dashboard.html
+++ b/client/static/partials/dashboard.html
@@ -10,7 +10,7 @@
 		<form class='col-xs-5 col-xs-offset-7 form form-horizontal'>
 			<label for='filter' class='control-label col-xs-2'>Search:</label>
 			<div class="col-xs-10">
-				<input type='text' class='form-control' ng-model='filter_name'>
+				<input type='text' class='form-control' ng-model='filter_name' placeholder='search here...'>
 			</div>
 		</form>
 	</div>
